feat: dashboard draft

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,10 +12,16 @@ dependencies:
     sdk: flutter
   flutter_native_splash: ^2.4.0
   flutter_riverpod: ^2.5.1
+  freezed_annotation: ^2.4.1
   iconoir_flutter: ^7.7.0
   intl: ^0.19.0
-  isar: ^3.1.0+1
-  isar_flutter_libs: ^3.1.0+1
+  isar:
+    version: ^3.1.7
+    hosted: https://pub.isar-community.dev/
+  isar_flutter_libs:
+    version: ^3.1.7
+    hosted: https://pub.isar-community.dev/
+  path_provider: ^2.1.3
   riverpod_annotation: ^2.3.5
 
 dev_dependencies:
@@ -23,13 +29,13 @@ dev_dependencies:
   custom_lint: ^0.6.4
   flutter_test:
     sdk: flutter
-  isar_generator: ^3.1.0+1
+  freezed: ^2.5.2
+  isar_generator:
+    version: ^3.1.7
+    hosted: https://pub.isar-community.dev/
   riverpod_generator: ^2.4.0
   riverpod_lint: ^2.3.10
   very_good_analysis: ^5.1.0
-
-dependency_overrides:
-  analyzer: ^6.3.0 # For isar_generator
 
 flutter:
   uses-material-design: true
