--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -8,6 +8,7 @@ environment:
   sdk: ">=3.3.4 <4.0.0"
 
 dependencies:
+  collection: ^1.18.0
   easy_localization: ^3.0.7
   flutter:
     sdk: flutter
@@ -26,6 +27,7 @@ dependencies:
     hosted: https://pub.isar-community.dev/
   path_provider: ^2.1.3
   riverpod_annotation: ^2.3.5
+  wolt_modal_sheet: ^0.9.2
 
 dev_dependencies:
   build_runner: ^2.4.9
