--- a/analysis_options.yaml
+++ b/analysis_options.yaml
@@ -3,6 +3,13 @@ include: package:very_good_analysis/analysis_options.yaml
 analyzer:
   plugins:
     - custom_lint
+  exclude:
+    - 'lib/**.freezed.dart'
+    - 'lib/**.g.dart'
+    - 'lib/**.gr.dart'
+    - 'lib/**/generated_plugin_registrant.dart'
+  errors:
+    invalid_annotation_target: ignore
 
 linter:
   rules:
