--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,6 +25,7 @@ dependencies:
   isar_flutter_libs:
     version: ^3.1.7
     hosted: https://pub.isar-community.dev/
+  mockito: ^5.4.4
   path_provider: ^2.1.3
   riverpod_annotation: ^2.3.5
   wolt_modal_sheet: ^0.9.2
