--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,6 +28,7 @@ dependencies:
   mockito: ^5.4.4
   path_provider: ^2.1.3
   riverpod_annotation: ^2.3.5
+  shared_preferences: ^2.3.3
   wolt_modal_sheet: ^0.9.2
 
 dev_dependencies:
