chore(path): file name normalization

--- a/flutter_native_splash.yaml
+++ b/flutter_native_splash.yaml
@@ -1,11 +1,11 @@
 flutter_native_splash:
-  color: "#FAFAFA"
-  image: assets/images/logo-dark.png
+  color: "#FCFAFB"
+  image: assets/images/logo_dark.png
   color_dark: "#1C1C1C"
-  image_dark: assets/images/logo-light.png
+  image_dark: assets/images/logo_light.png
 
   android_12:
-    image: assets/images/logo-dark.png
+    image: assets/images/logo_dark.png
     icon_background_color: "#FAFAFA"
-    image_dark: assets/images/logo-light.png
+    image_dark: assets/images/logo_light.png
     icon_background_color_dark: "#1C1C1C"
