--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -9,9 +9,11 @@ environment:
 
 dependencies:
   collection: ^1.18.0
+  dio: ^5.7.0
   easy_localization: ^3.0.7
   flutter:
     sdk: flutter
+  flutter_gen_runner: ^5.8.0
   flutter_localizations:
     sdk: flutter
   flutter_native_splash: ^2.4.0
@@ -25,8 +27,10 @@ dependencies:
   isar_flutter_libs:
     version: ^3.1.7
     hosted: https://pub.isar-community.dev/
+  json_annotation: ^4.9.0
   mockito: ^5.4.4
-  path_provider: ^2.1.3
+  path_provider: ^2.1.5
+  retrofit: ^4.4.1
   riverpod_annotation: ^2.3.5
   shared_preferences: ^2.3.3
   wolt_modal_sheet: ^0.9.2
@@ -40,14 +44,28 @@ dev_dependencies:
   isar_generator:
     version: ^3.1.7
     hosted: https://pub.isar-community.dev/
+  json_serializable: ^6.8.0
+  retrofit_generator: ^8.2.1
   riverpod_generator: ^2.4.0
   riverpod_lint: ^2.3.10
   very_good_analysis: ^6.0.0
+
+flutter_gen:
+  output: lib/utils/
+  fonts:
+    enabled: false
+  assets:
+    outputs:
+      class_name: MonnAssets
+    exclude:
+      - assets/translations/**
 
 flutter:
   uses-material-design: true
   assets:
     - assets/translations/
+    - assets/images/crypto/
+
   fonts:
     - family: DMSans
       fonts:
