--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,6 +19,7 @@ dependencies:
   flutter_native_splash: ^2.4.4
   flutter_riverpod: ^2.6.1
   freezed_annotation: ^2.4.4
+  html: ^0.15.5
   iconoir_flutter: ^7.10.1
   isar:
     version: ^3.1.8
