--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,6 +28,7 @@ dependencies:
     version: ^3.1.8
     hosted: https://pub.isar-community.dev/
   json_annotation: ^4.9.0
+  logger: ^2.5.0
   mockito: ^5.4.5
   path_provider: ^2.1.5
   retrofit: ^4.4.2
