feat(form/pea): refactor design for pea is completed

--- a/analysis_options.yaml
+++ b/analysis_options.yaml
@@ -10,6 +10,7 @@ analyzer:
     - 'lib/**/generated_plugin_registrant.dart'
   errors:
     invalid_annotation_target: ignore
+    document_ignores: ignore
 
 linter:
   rules:
