--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -9,11 +9,11 @@ environment:
 
 dependencies:
   collection: ^1.19.0
-  dio: ^5.7.0
+  dio: ^5.8.0+1
   easy_localization: ^3.0.7
   flutter:
     sdk: flutter
-  flutter_gen_runner: ^5.8.0
+  flutter_gen_runner: ^5.10.0
   flutter_localizations:
     sdk: flutter
   flutter_native_splash: ^2.4.4
@@ -33,17 +33,17 @@ dependencies:
   path_provider: ^2.1.5
   retrofit: ^4.4.2
   riverpod_annotation: ^2.6.1
-  shared_preferences: ^2.3.5
+  shared_preferences: ^2.5.2
   wolt_modal_sheet: ^0.11.0
 
 dev_dependencies:
-  build_runner: ^2.4.14
+  build_runner: ^2.4.15
   custom_lint: ^0.7.0
   flutter_test:
     sdk: flutter
   freezed: ^2.5.7
   isar_generator:
-    version: ^3.1.7
+    version: ^3.1.8
     hosted: https://pub.isar-community.dev/
   json_serializable: ^6.9.0
   retrofit_generator: ^9.1.7
@@ -67,6 +67,7 @@ flutter:
     - assets/translations/
     - assets/images/crypto/
     - assets/images/icon/
+    - assets/images/counter_strike/
 
   fonts:
     - family: DMSans
