--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,15 +11,15 @@ dependencies:
   collection: ^1.19.0
   dio: ^5.8.0+1
   easy_localization: ^3.0.7
+  file_picker: ^10.1.2
   flutter:
     sdk: flutter
-  flutter_gen_runner: ^5.10.0
   flutter_localizations:
     sdk: flutter
   flutter_native_splash: ^2.4.4
   flutter_riverpod: ^2.6.1
   freezed_annotation: ^2.4.4
-  html: ^0.15.5
+  html: ^0.15.6
   iconoir_flutter: ^7.10.1
   isar:
     version: ^3.1.8
@@ -30,15 +30,18 @@ dependencies:
   json_annotation: ^4.9.0
   logger: ^2.5.0
   mockito: ^5.4.5
+  path: ^1.9.0
   path_provider: ^2.1.5
   retrofit: ^4.4.2
   riverpod_annotation: ^2.6.1
+  share_plus: ^11.0.0
   shared_preferences: ^2.5.2
   wolt_modal_sheet: ^0.11.0
 
 dev_dependencies:
   build_runner: ^2.4.15
   custom_lint: ^0.7.0
+  flutter_gen_runner: ^5.10.0
   flutter_test:
     sdk: flutter
   freezed: ^2.5.7
@@ -81,3 +84,6 @@ flutter:
           weight: 800
         - asset: fonts/DMSans-Black.ttf
           weight: 900
+
+
+# Faire un fixe pour editer les transactions de crowdfunding pour la transaction du 17/04/25
