--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -2,22 +2,21 @@ name: monn
 description: "Monn is my personal investment tracking and analysis"
 publish_to: "none"
 
-version: 1.2.0+4
+version: 1.2.1+5
 
 environment:
   sdk: ">=3.8.0 <4.0.0"
 
 dependencies:
   collection: ^1.19.1
-  dio: ^5.8.0+1
+  dio: ^5.9.0
   easy_localization: ^3.0.8
   file_picker: ^10.2.0
   flutter:
     sdk: flutter
-  flutter_native_splash: ^2.4.4
+  flutter_native_splash: ^2.4.7
   flutter_riverpod: ^3.0.3
   freezed_annotation: ^3.1.0
-  html: ^0.15.6
   iconoir_flutter: ^7.11.0
   isar_community: ^3.3.0
   isar_community_flutter_libs: ^3.3.0
