refactor(dashboard): auto-manage savings and add final amount sorting
- Remove AddSavingsScreen, savings entries now auto-created when needed
- Add sortByFinalAmountDesc/Asc filter options with translations
- Auto-sync cash total to Savings table in CashRepository

--- a/.gitignore
+++ b/.gitignore
@@ -45,6 +45,10 @@ app.*.map.json
 /android/app/release
 api_keys.json
 
+# Signing
+android/key.properties
+android/*.jks
+
 # Isar
 libisar.dylib
 default.isar-lck
