--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,7 +25,7 @@ dependencies:
   mockito: ^5.4.4
   path: ^1.9.1
   path_provider: ^2.1.5
-  retrofit: ^4.6.0
+  retrofit: 4.6.0
   riverpod_annotation: ^3.0.3
   share_plus: ^12.0.1
   shared_preferences: ^2.5.3
